use the magic java flags for docker memory